--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="website icon" href="images/frontend.jpg" />
-    <title>Front End Roadmap | RZKYRMDNU</title>
+    <title>Front End Roadmap | DANDY</title>
     <!-- Tailwind CSS -->
     <link href="dist/output.css" rel="stylesheet" />
   </head>
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header class="fixed top-0 left-0 z-10 flex flex-col w-full items-center justify-center bg-gray-200 text-blue-600 backdrop-blur-sm bg-opacity-60 shadow-sm">
       <div class="text-2xl md:text-4xl font-extrabold">Front End Roadmap</div>
-      <div class="text-sm font-bold">RZKYRMDNU</div>
+      <div class="text-sm font-bold">DANDY</div>
     </header>
     <!-- Header End -->
 
@@ -404,7 +404,7 @@
       </svg>
     </a>
 
-    <footer class="w-full bg-gray-800 text-gray-100 text-center py-4">Copyright &copy; 2023 - Made with ❤️ by <a class="underline underline-offset-2" target="_blank" href="https://www.rzkyrmdnu.my.id/">rzkyrmdnu</a></footer>
+    <footer class="w-full bg-gray-800 text-gray-100 text-center py-4">Copyright &copy; 2023 - Made with ❤️ by <a class="underline underline-offset-2" target="_blank" href="https://www.kdandy.com/">kdandy</a></footer>
 
     <!-- Button hidden when on top -->
     <script>
